<resources>
    <string name="app_name">启辰拍</string>


    <string name="register_name_digits">
        0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>

    <string name="phone_colon">手机号</string>

    <string name="setting">设置</string>
    <string name="log_out">退出登录</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="change_name">修改姓名</string>
    <string name="saev">保存</string>
    <string name="auld_pwd">旧密码：</string>
    <string name="new_pwd">新密码</string>
    <string name="ok_new_pwd">确认密码</string>
    <string name="about">关于</string>
    <string name="version_update">版本更新</string>
    <string name="delete_cache">清除缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="input_user">请输入账号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="keep_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="my">我的</string>
    <string name="back">返回</string>
    <string name="on_the_way">在路上</string>
    <string name="device">设备</string>
    <string name="photo">相册</string>
    <string name="photo_share">图片分享</string>
    <string name="video_share">视频分享</string>
    <string name="inform">违章举报</string>
    <string name="message">消息</string>
    <string name="help">帮助</string>
    <string name="use_the_help">使用帮助</string>
    <string name="recommend">推荐</string>
    <string name="dynamic">动态</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="forgot_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="name">呢称</string>
    <string name="gender">性别</string>
    <string name="region">地区</string>
    <string name="signature">签名</string>
    <string name="fans">粉丝</string>
    <string name="publish">发表</string>
    <string name="share">分享</string>
    <string name="weizhang_check">违章查询</string>
    <string name="top">排行榜</string>
    <string name="save_check">保存并查询</string>
</resources>