<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/space_15"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/fontsize_14sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textSize="@dimen/fontsize_16sp" />


    <TextView
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/space_15"
        android:text="@string/publish"
        android:textColor="@color/white"
        android:textSize="@dimen/fontsize_14sp" />

</RelativeLayout>