<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_25"
        android:layout_marginTop="@dimen/space_60"
        android:background="@null"
        android:drawablePadding="8dp"
        android:hint="@string/phone_colon"
        android:inputType="phone"
        android:paddingLeft="@dimen/space_10"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/qianhuise"
        android:textSize="@dimen/fontsize_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_5"
        android:background="@color/white"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/space_25"
            android:layout_marginTop="@dimen/space_20"
            android:background="@null"
            android:drawablePadding="8dp"
            android:hint="@string/code"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="@dimen/space_10"
            android:textColor="@color/white"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp" />

        <Button
            android:id="@+id/get_code"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/space_35"
            android:background="@color/gray"
            android:text="@string/get_code"
            android:textColor="@color/white" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:background="@color/white"></View>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_25"
        android:layout_marginTop="@dimen/space_20"
        android:background="@null"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/space_10"
        android:textColor="@color/white"
        android:textColorHint="@color/qianhuise"
        android:textSize="@dimen/fontsize_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_5"
        android:background="@color/white"></View>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_25"
        android:layout_marginTop="@dimen/space_20"
        android:background="@null"
        android:drawablePadding="8dp"
        android:hint="@string/ok_new_pwd"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/space_10"
        android:textColor="@color/white"
        android:textColorHint="@color/qianhuise"
        android:textSize="@dimen/fontsize_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_5"
        android:background="@color/white"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ok_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:background="@drawable/bt_purple"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize_16sp"
            android:visibility="visible" />

    </RelativeLayout>

</LinearLayout>