<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/logo" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_25"
        android:layout_marginTop="@dimen/space_30"
        android:background="@null"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/input_user"
        android:inputType="phone"
        android:paddingLeft="@dimen/space_10"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/qianhuise"
        android:textSize="@dimen/fontsize_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_5"
        android:background="@color/white"></View>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_25"
        android:layout_marginTop="@dimen/space_20"
        android:background="@null"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="8dp"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/space_10"
        android:textColor="@color/white"
        android:textColorHint="@color/qianhuise"
        android:textSize="@dimen/fontsize_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_5"
        android:background="@color/white"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_30"
        android:layout_marginRight="@dimen/space_30"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/box_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_5"
            android:text="@string/keep_pwd"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_pwd_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize_16sp" />

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize_16sp" />


        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/login_bt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize_16sp"
            android:visibility="gone" />

        <com.qcp.dfv.ui.widget.LoginButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            app:button_color="@color/colorAccent"
            app:button_normal_color="@android:color/transparent"
            app:button_normal_stroke_color="#50ffffff"
            app:button_normal_stroke_width="1dp"
            app:circle_loading_color="@android:color/white"
            app:circle_loading_width="1dp"
            app:failed_button_color="@color/colorPrimaryDark"
            app:failed_text="登录失败!"
            app:failed_text_color="@android:color/holo_orange_dark"
            app:login_text="@string/login"
            app:text_color="@color/white"
            app:text_normal_color="@android:color/white"
            app:text_size="16sp" />

    </RelativeLayout>

</LinearLayout>