<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/line"
        android:layout_marginBottom="@dimen/space_10">

        <TextView
            android:id="@+id/photo_shate_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/space_10"
            android:drawableTop="@drawable/photo_share"
            android:gravity="center"
            android:text="@string/photo_share"
            android:textSize="@dimen/fontsize_14sp" />

        <TextView
            android:id="@+id/video_shate_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/space_10"
            android:drawableTop="@drawable/video_share"
            android:gravity="center"
            android:text="@string/video_share"
            android:textSize="@dimen/fontsize_14sp" />

        <TextView
            android:id="@+id/discipline_shate_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/space_10"
            android:drawableTop="@drawable/discipline_share"
            android:gravity="center"
            android:text="@string/inform"
            android:textSize="@dimen/fontsize_14sp" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/exit_ibt"
        android:background="@color/qianhuise"></View>

    <ImageButton
        android:id="@+id/exit_ibt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_20"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/exit" />

    <View
        android:id="@+id/exit_v"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_5"></View>

</RelativeLayout>