<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beijing"
    android:orientation="vertical">

    <include layout="@layout/main_header"></include>


    <LinearLayout
        android:id="@+id/update_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/space_15" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/version_update"

            android:textSize="@dimen/fontsize_15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/delete_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/space_15" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_cache"

            android:textSize="@dimen/fontsize_15sp" />


        <TextView
            android:id="@+id/cache_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0MB"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/log_out_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/space_15" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_out"
            android:textSize="@dimen/fontsize_15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beijing"></View>


</LinearLayout>