<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beijing"
    android:orientation="vertical">

    <include layout="@layout/main_header"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_80"
        android:layout_marginTop="@dimen/space_8"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_weight="1"
            android:text="头像"
            android:textSize="@dimen/fontsize_14sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/me_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="20dp"
            android:src="@drawable/right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_ly"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/space_8"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="xxxxxxx" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="20dp"
            android:src="@drawable/right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_ly"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/gender_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="男" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="20dp"
            android:src="@drawable/right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/region_ly"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:text="@string/region" />

        <TextView
            android:id="@+id/region_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="深圳" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="20dp"
            android:src="@drawable/right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signature_ly"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0.5dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_20"
            android:text="@string/signature" />

        <TextView
            android:id="@+id/signature_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="未填写" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginRight="20dp"
            android:src="@drawable/right" />
    </LinearLayout>

</LinearLayout>